--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -399,7 +399,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce";
+		bootargs = "rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce quiet";
 	};
 
 	soc: soc { };
