--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -459,7 +459,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7 noirqdebug";
+		bootargs = "rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce";
 	};
 
 	soc: soc { };
