arm64: dts: sdmmagpie: Disable kpti
As per qualcomm - "SM8150/SM8250/SM8350/SM7250/SM7150/SM6150 - KPTI Not
required".
It can also help increase performance by a lot in some scenarios.

Signed-off-by: Kuba Wojciechowski <nullbytepl@gmail.com>
Signed-off-by: KenHV <yo@kenharris.xyz>

--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -399,7 +399,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce quiet";
+		bootargs = "rcu_nocbs=0-7 noirqdebug nosoftlockup mce=ignore_ce quiet kpti=off";
 	};
 
 	soc: soc { };
