drivers: Import popup drivers
Signed-off-by: KenHV <yo@kenharris.xyz>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -231,4 +231,8 @@ source "drivers/mmi_info/Kconfig"
 
 source "drivers/moto_f_usbnet/Kconfig"
 
+source "drivers/popup/aw8646/Kconfig"
+
+source "drivers/popup/akm09970/Kconfig"
+
 endmenu
