--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -194,3 +194,5 @@ obj-$(CONFIG_GNSS)		+= gnss/
 obj-$(CONFIG_MMI_ANNOTATE)	+= mmi_annotate/
 obj-$(CONFIG_MMI_INFO)		+= mmi_info/
 obj-$(CONFIG_MOTO_F_USBNET)	+= moto_f_usbnet/
+obj-$(CONFIG_POPUP_AW8646) 	+= popup/aw8646/
+obj-$(CONFIG_POPUP_AKM09970) 	+= popup/akm09970/
