--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -23,7 +23,7 @@ ifeq ($(CONFIG_ARCH_SDMSHRIKE), y)
 include $(srctree)/techpack/audio/config/sm8150auto.conf
 export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm8150auto.conf)
 endif
-ifeq ($(CONFIG_ARCH_SM6150), y)
+ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 include $(srctree)/techpack/audio/config/sm6150auto.conf
 export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sm6150auto.conf)
 endif
@@ -62,7 +62,7 @@ ifeq ($(CONFIG_ARCH_SDMSHRIKE), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/sm8150autoconf.h
 endif
-ifeq ($(CONFIG_ARCH_SM6150), y)
+ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 LINUXINCLUDE    += \
                 -include $(srctree)/techpack/audio/config/sm6150autoconf.h
 endif
