--- a/techpack/audio/Makefile.am
+++ b/techpack/audio/Makefile.am
@@ -27,7 +27,7 @@ ifeq ($(TARGET_SUPPORT),qcs40x)
 KBUILD_OPTIONS += CONFIG_ARCH_QCS405=y
 endif
 ifeq ($(TARGET_SUPPORT), sdmsteppe)
-KBUILD_OPTIONS += CONFIG_ARCH_SM6150=y
+KBUILD_OPTIONS += CONFIG_ARCH_SDMMAGPIE=y
 endif
 
 obj-m := ipc/
