--- a/techpack/audio/asoc/codecs/bolero/Kbuild
+++ b/techpack/audio/asoc/codecs/bolero/Kbuild
@@ -16,7 +16,7 @@ ifeq ($(KERNEL_BUILD), 1)
 endif
 
 ifeq ($(KERNEL_BUILD), 0)
-	ifeq ($(CONFIG_ARCH_SM6150), y)
+	ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 		include $(AUDIO_ROOT)/config/sm6150auto.conf
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sm6150autoconf.h
