--- a/techpack/audio/dsp/codecs/Kbuild
+++ b/techpack/audio/dsp/codecs/Kbuild
@@ -35,7 +35,7 @@ ifeq ($(KERNEL_BUILD), 0)
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sdm670autoconf.h
 	endif
-	ifeq ($(CONFIG_ARCH_SM6150), y)
+	ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 		include $(AUDIO_ROOT)/config/sm6150auto.conf
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sm6150autoconf.h
