--- a/techpack/audio/soc/Kbuild
+++ b/techpack/audio/soc/Kbuild
@@ -39,7 +39,7 @@ ifeq ($(KERNEL_BUILD), 0)
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sm8150autoconf.h
 	endif
-	ifeq ($(CONFIG_ARCH_SM6150), y)
+	ifeq ($(CONFIG_ARCH_SDMMAGPIE), y)
 		include $(AUDIO_ROOT)/config/sm6150auto.conf
 		export
 		INCS    +=  -include $(AUDIO_ROOT)/config/sm6150autoconf.h
