--- a/arch/arm64/configs/liber-perf_defconfig
+++ b/arch/arm64/configs/liber-perf_defconfig
@@ -213,7 +213,6 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_SHMEM=y
 CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
@@ -244,7 +243,6 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-# CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
@@ -292,7 +290,6 @@ CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
@@ -312,7 +309,6 @@ CONFIG_VMAP_STACK=y
 CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
-CONFIG_STRICT_MODULE_RWX=y
 # CONFIG_REFCOUNT_FULL is not set
 CONFIG_ARCH_HAS_RELR=y
 
@@ -324,23 +320,7 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-# CONFIG_MODULE_FORCE_UNLOAD is not set
-CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
-CONFIG_MODULE_SIG_ALL=y
-# CONFIG_MODULE_SIG_SHA1 is not set
-# CONFIG_MODULE_SIG_SHA224 is not set
-# CONFIG_MODULE_SIG_SHA256 is not set
-# CONFIG_MODULE_SIG_SHA384 is not set
-CONFIG_MODULE_SIG_SHA512=y
-CONFIG_MODULE_SIG_HASH="sha512"
-# CONFIG_MODULE_COMPRESS is not set
-# CONFIG_TRIM_UNUSED_KSYMS is not set
+# CONFIG_MODULES is not set
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLK_SCSI_REQUEST=y
@@ -640,8 +620,6 @@ CONFIG_ARM64_PAN=y
 #
 CONFIG_ARM64_UAO=y
 # CONFIG_ARM64_PMEM is not set
-CONFIG_ARM64_MODULE_CMODEL_LARGE=y
-CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
@@ -845,7 +823,7 @@ CONFIG_NET_PTP_CLASSIFY=y
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
-CONFIG_BRIDGE_NETFILTER=m
+CONFIG_BRIDGE_NETFILTER=y
 
 #
 # Core Netfilter Configuration
@@ -1210,7 +1188,6 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-CONFIG_BPF_JIT=y
 # CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
@@ -1315,7 +1292,6 @@ CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
-# CONFIG_TEST_ASYNC_DRIVER_PROBE is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
 CONFIG_GENERIC_CPU_AUTOPROBE=y
@@ -1366,7 +1342,6 @@ CONFIG_QCOM_EBI2=y
 # CONFIG_CONNECTOR is not set
 # CONFIG_GNSS is not set
 CONFIG_MTD=y
-# CONFIG_MTD_TESTS is not set
 # CONFIG_MTD_REDBOOT_PARTS is not set
 # CONFIG_MTD_CMDLINE_PARTS is not set
 # CONFIG_MTD_AFS_PARTS is not set
@@ -1611,6 +1586,9 @@ CONFIG_QPNP_MISC=y
 # CONFIG_MODS_NEW_SW_ARCH is not set
 # CONFIG_SERIAL_MAX310X_CORE is not set
 # CONFIG_SENSORS_SX933X is not set
+# CONFIG_MMI_SYS_TEMP is not set
+# CONFIG_INPUT_ABOV_A96T is not set
+# CONFIG_MOTO_UTAGS is not set
 CONFIG_MMI_SIGPRINT=y
 
 #
@@ -2270,6 +2248,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_GOODIX_GTX8_MMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
+# CONFIG_TOUCHSCREEN_FTS_0FLASH_MMI is not set
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -2311,6 +2290,8 @@ CONFIG_STMVL53L1_NETLINK_PROTOCOL=8
 # CONFIG_STMVL53L1_USE_CAMERA_CCI is not set
 # CONFIG_SMI130 is not set
 # CONFIG_RMI4_CORE is not set
+CONFIG_INPUT_FINGERPRINT=y
+# CONFIG_FINGERPRINT_GOODIX_FOD_MMI is not set
 
 #
 # Hardware I/O ports
@@ -2406,7 +2387,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_DIAG_OVER_TTY=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
-CONFIG_MSM_RDBG=m
+CONFIG_MSM_RDBG=y
 
 #
 # I2C support
@@ -2488,7 +2469,6 @@ CONFIG_I2C_QCOM_GENI=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_MSM_V2 is not set
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_SLAVE is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -2524,7 +2504,6 @@ CONFIG_SPI_QCOM_GENI=y
 # SPI Protocol Masters
 #
 CONFIG_SPI_SPIDEV=y
-# CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
 CONFIG_SPMI=y
@@ -2923,6 +2902,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_BD9571MWV is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_CROS_EC is not set
+# CONFIG_MFD_MADERA is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3080,7 +3060,7 @@ CONFIG_IR_SHARP_DECODER=y
 CONFIG_IR_MCE_KBD_DECODER=y
 CONFIG_IR_XMP_DECODER=y
 # CONFIG_RC_DEVICES is not set
-CONFIG_IR_MSM_GENI=m
+CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -3122,7 +3102,7 @@ CONFIG_MEDIA_USB_SUPPORT=y
 #
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
-CONFIG_USB_GSPCA=m
+CONFIG_USB_GSPCA=y
 # CONFIG_USB_M5602 is not set
 # CONFIG_USB_STV06XX is not set
 # CONFIG_USB_GL860 is not set
@@ -3224,12 +3204,12 @@ CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
 CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
 CONFIG_MSM_NPU=y
-CONFIG_DVB_MPQ=m
+CONFIG_DVB_MPQ=y
 
 #
 # Qualcomm Technologies, Inc. Demux device config
 #
-CONFIG_DVB_MPQ_DEMUX=m
+CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_NUM_DMX_DEVICES=4
 CONFIG_DVB_MPQ_SW=y
 # CONFIG_TSPP is not set
@@ -3263,7 +3243,6 @@ CONFIG_DVB_MPQ_SW=y
 # Media ancillary drivers (tuners, sensors, i2c, spi, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
-CONFIG_MEDIA_ATTACH=y
 CONFIG_VIDEO_IR_I2C=y
 
 #
@@ -3538,7 +3517,7 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
-CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
 # CONFIG_LCD_LMS283GF05 is not set
 # CONFIG_LCD_LTV350QV is not set
@@ -3666,6 +3645,8 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 #
 # CODEC drivers
 #
+# CONFIG_CIRRUS_PLAYBACK is not set
+# CONFIG_SND_SOC_AOV_TRIGGER is not set
 # CONFIG_SND_SOC_AC97_CODEC is not set
 # CONFIG_SND_SOC_ADAU1701 is not set
 # CONFIG_SND_SOC_ADAU1761_I2C is not set
@@ -3677,11 +3658,15 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 # CONFIG_SND_SOC_ALC5623 is not set
+# CONFIG_SND_SOC_AWINIC_AW882XX is not set
 # CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS35L34 is not set
 # CONFIG_SND_SOC_CS35L35 is not set
+# CONFIG_SND_SOC_CS35L41 is not set
+# CONFIG_SND_SOC_CS35L41_SPI is not set
+# CONFIG_SND_SOC_CS35L41_I2C is not set
 # CONFIG_SND_SOC_CS42L42 is not set
 # CONFIG_SND_SOC_CS42L51_I2C is not set
 # CONFIG_SND_SOC_CS42L52 is not set
@@ -3694,6 +3679,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_CS42XX8_I2C is not set
 # CONFIG_SND_SOC_CS43130 is not set
 # CONFIG_SND_SOC_CS4349 is not set
+# CONFIG_SND_SOC_CS47L35 is not set
 # CONFIG_SND_SOC_CS53L30 is not set
 # CONFIG_SND_SOC_DIO2125 is not set
 CONFIG_SND_SOC_HDMI_CODEC=y
@@ -3703,6 +3689,7 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_ES8328_SPI is not set
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
+# CONFIG_SND_SOC_MADERA is not set
 # CONFIG_SND_SOC_MAX98504 is not set
 # CONFIG_SND_SOC_MAX98927 is not set
 # CONFIG_SND_SOC_MAX9860 is not set
@@ -4441,11 +4428,7 @@ CONFIG_STAGING=y
 # CONFIG_IRDA is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
 # CONFIG_RTS5208 is not set
 
 #
@@ -4544,8 +4527,6 @@ CONFIG_ION=y
 # CONFIG_ION_FORCE_DMA_SYNC is not set
 CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 # CONFIG_STAGING_BOARD is not set
-# CONFIG_LTE_GDM724X is not set
-# CONFIG_LNET is not set
 # CONFIG_DGNC is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
@@ -4562,6 +4543,11 @@ CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 #
 # CONFIG_TYPEC_TCPM is not set
 # CONFIG_PI433 is not set
+
+#
+# Qualcomm Atheros CLD WLAN module
+#
+# CONFIG_QCA_CLD_WLAN is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -4813,7 +4799,7 @@ CONFIG_QCOM_SDMMAGPIE_LLCC=y
 # CONFIG_QCOM_ATOLL_LLCC is not set
 # CONFIG_QCOM_SDXPRAIRIE_LLCC is not set
 # CONFIG_QCOM_LLCC_AMON is not set
-CONFIG_QCOM_LLCC_PERFMON=m
+CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_QMI_HELPERS=y
 # CONFIG_QCOM_QMI_RMNET is not set
 CONFIG_QCOM_SMEM=y
@@ -5305,6 +5291,7 @@ CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
 CONFIG_ARM_GIC_V3_ACL=y
 CONFIG_QCOM_SHOW_RESUME_IRQ=y
+# CONFIG_MADERA_IRQ is not set
 CONFIG_PARTITION_PERCPU=y
 CONFIG_QTI_PDC=y
 # CONFIG_QTI_PDC_SM8150 is not set
@@ -5380,8 +5367,8 @@ CONFIG_NVMEM_SPMI_SDAM=y
 #
 # CONFIG_FSI is not set
 # CONFIG_TEE is not set
-# CONFIG_SENSORS is not set
 CONFIG_SENSORS_SSC=y
+# CONFIG_SENSORS_CLASS is not set
 CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
 CONFIG_ESOC_CLIENT=y
@@ -5390,6 +5377,12 @@ CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
 # CONFIG_MDM_DBG_REQ_ENG is not set
+# CONFIG_MMI_ANNOTATE is not set
+# CONFIG_MMI_INFO is not set
+# CONFIG_MOTO_F_USBNET is not set
+# CONFIG_POPUP_AKM09970 is not set
+# CONFIG_POPUP_AW8646 is not set
+# CONFIG_POPUP_MXM1120 is not set
 
 #
 # Firmware Drivers
@@ -5542,6 +5535,7 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
+# CONFIG_PSTORE_LAST_KMSG is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
@@ -5790,7 +5784,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
-# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -5800,15 +5793,10 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_UUID is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_HASH is not set
-# CONFIG_TEST_LKM is not set
-# CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_MEMTEST is not set
-# CONFIG_TEST_STATIC_KEYS is not set
-# CONFIG_TEST_KMOD is not set
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_STACKINIT is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
@@ -5826,7 +5814,6 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
 CONFIG_DEBUG_ALIGN_RODATA=y
-# CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
 # CONFIG_CORESIGHT is not set
 
@@ -5926,7 +5913,6 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_SIMD=y
 
 #
@@ -6049,7 +6035,6 @@ CONFIG_PKCS7_MESSAGE_PARSER=y
 #
 # Certificates for signature checking
 #
-CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
