defconfig: Enable liber drivers
Signed-off-by: KenHV <yo@kenharris.xyz>

--- a/arch/arm64/configs/liber-perf_defconfig
+++ b/arch/arm64/configs/liber-perf_defconfig
@@ -1586,9 +1586,9 @@ CONFIG_QPNP_MISC=y
 # CONFIG_MODS_NEW_SW_ARCH is not set
 # CONFIG_SERIAL_MAX310X_CORE is not set
 # CONFIG_SENSORS_SX933X is not set
-# CONFIG_MMI_SYS_TEMP is not set
-# CONFIG_INPUT_ABOV_A96T is not set
-# CONFIG_MOTO_UTAGS is not set
+CONFIG_MMI_SYS_TEMP=y
+CONFIG_INPUT_ABOV_A96T=y
+CONFIG_MOTO_UTAGS=y
 CONFIG_MMI_SIGPRINT=y
 
 #
@@ -2248,7 +2248,12 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
 # CONFIG_TOUCHSCREEN_GOODIX_GTX8_MMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
-# CONFIG_TOUCHSCREEN_FTS_0FLASH_MMI is not set
+CONFIG_TOUCHSCREEN_FTS_0FLASH_MMI=y
+# CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME_FT8719 is not set
+CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME_FT8756=y
+# CONFIG_INPUT_FOCALTECH_0FLASH_MMI_IC_NAME_FT8009 is not set
+CONFIG_TOUCHSCREEN_FTS_0FLASH_MMI_ENABLE_DOUBLE_TAP=y
+CONFIG_TOUCHSCREEN_FTS_0FLASH_MMI_ENABLE_PALM=y
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
@@ -2291,7 +2296,7 @@ CONFIG_STMVL53L1_NETLINK_PROTOCOL=8
 # CONFIG_SMI130 is not set
 # CONFIG_RMI4_CORE is not set
 CONFIG_INPUT_FINGERPRINT=y
-# CONFIG_FINGERPRINT_GOODIX_FOD_MMI is not set
+CONFIG_FINGERPRINT_GOODIX_FOD_MMI=y
 
 #
 # Hardware I/O ports
@@ -3645,7 +3650,8 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 #
 # CODEC drivers
 #
-# CONFIG_CIRRUS_PLAYBACK is not set
+CONFIG_CIRRUS_PLAYBACK=y
+CONFIG_SND_SOC_WM_ADSP=y
 # CONFIG_SND_SOC_AOV_TRIGGER is not set
 # CONFIG_SND_SOC_AC97_CODEC is not set
 # CONFIG_SND_SOC_ADAU1701 is not set
@@ -3658,15 +3664,15 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 # CONFIG_SND_SOC_ALC5623 is not set
-# CONFIG_SND_SOC_AWINIC_AW882XX is not set
+CONFIG_SND_SOC_AWINIC_AW882XX=y
 # CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS35L34 is not set
 # CONFIG_SND_SOC_CS35L35 is not set
-# CONFIG_SND_SOC_CS35L41 is not set
+CONFIG_SND_SOC_CS35L41=y
 # CONFIG_SND_SOC_CS35L41_SPI is not set
-# CONFIG_SND_SOC_CS35L41_I2C is not set
+CONFIG_SND_SOC_CS35L41_I2C=y
 # CONFIG_SND_SOC_CS42L42 is not set
 # CONFIG_SND_SOC_CS42L51_I2C is not set
 # CONFIG_SND_SOC_CS42L52 is not set
@@ -4547,7 +4553,8 @@ CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 #
 # Qualcomm Atheros CLD WLAN module
 #
-# CONFIG_QCA_CLD_WLAN is not set
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_QCA_CLD_WLAN_PROFILE="default"
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
@@ -5368,7 +5375,7 @@ CONFIG_NVMEM_SPMI_SDAM=y
 # CONFIG_FSI is not set
 # CONFIG_TEE is not set
 CONFIG_SENSORS_SSC=y
-# CONFIG_SENSORS_CLASS is not set
+CONFIG_SENSORS_CLASS=y
 CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
 CONFIG_ESOC_CLIENT=y
@@ -5377,11 +5384,12 @@ CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
 # CONFIG_MDM_DBG_REQ_ENG is not set
-# CONFIG_MMI_ANNOTATE is not set
-# CONFIG_MMI_INFO is not set
-# CONFIG_MOTO_F_USBNET is not set
-# CONFIG_POPUP_AKM09970 is not set
-# CONFIG_POPUP_AW8646 is not set
+CONFIG_MMI_ANNOTATE=y
+CONFIG_MMI_INFO=y
+CONFIG_MOTO_F_USBNET=y
+CONFIG_POPUP_AKM09970=y
+CONFIG_POPUP_AW8646=y
+CONFIG_USE_HW_CLK=y
 # CONFIG_POPUP_MXM1120 is not set
 
 #
